Major refactoring of JVMXRay project: removed obsolete files, renamed classes, added new logging and property classes, updated scripts and configs